--- a/style.css
+++ b/style.css
@@ -11,13 +11,19 @@ header {
     padding: 10px 20px;
 }
 
-nav ul {
-    list-style: none;
-    display: inline;
+.navbar{
+  width: 85%;
+  margin: auto;
+  padding: 35px 0;
+  display: flex;
+  align-items: centre;
+  justify-content: space-between;
 }
 
-nav ul li {
-    margin-right: 20px;
+.navbar ul li{
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
 }
 
 nav ul li a {
