--- a/style.css
+++ b/style.css
@@ -1,53 +1,64 @@
-* {
+*{
+    margin: 0;
+}
+body{
+    font-family: "Roboto", sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    background-color: #080808;
 }
 
-/* Style the header and navigation */
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 20px;
+logo{
+    font-family: "Sen", sans-serif;
 }
 
-.List{
-  width: 85%;
-  margin: auto;
-  padding: 35px 0;
-  display: flex;
-  align-items: centre;
-  justify-content: space-between;
+.navbar {
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ padding: 20px;
+ background-color: rgb(122, 0, 0) ;
 }
 
-.List ul li{
-  list-style: none;
-  display: inline-block;
-  margin: 0 20px;
+.burger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 25px;
+    height: 20px;
+    cursor: pointer;
 }
 
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-}
-
-nav ul li a:hover {
-    color: #ffcc00;
-}
-
-/* Style the main content area */
-main {
-    padding: 20px;
-}
-
-/* Style the footer */
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: absolute;
-    bottom: 0;
+.barone {
     width: 100%;
+    height: 3px;
+    background-color:beige
+}
+
+.bartwo {
+    width: 100%;
+    height: 3px;
+    background-color:beige
+}
+
+.barthree {
+    width: 100%;
+    height: 3px;
+    background-color:beige
+}
+
+.bartwo:checked
+
+.menu {
+    display: flex;
+    list-style: none;
+}
+
+.menu li {
+    margin: 0 15px;
+}
+
+.menu a {
+    text-decoration: none;
+    color: rgb(178, 226, 210);
 }
