--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
     margin: 0;
     padding: 0;
     background-color: #080808;
+    background-image: url(background.jpg);
+    background-repeat: no repeat;
+    background-size: cover;
 }
 
 logo{
