--- a/style.css
+++ b/style.css
@@ -111,42 +111,16 @@ nav ul {
     transition: 1s ease all;
   }
     
-  
+  /* sets background to black */
   .container {
     background-color: #151515;
     min-height: calc(100vh - 50px);
     color: white;
   }
   
-  .content-container {
-    
-  }
+
   
-  .featured-content {
-    height: 50vh;
-    padding: 50px;
-  }
-  
-  .featured-title {
-    width: 200px;
-  }
-  
-  .featured-desc {
-    width: 500px;
-    color: lightgray;
-    margin: 30px 0;
-  }
-  
-  .featured-button {
-    background-color: #4dbf00;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    font-weight: bold;
-  }
-  
+  /* these style the movie listing itself incuding the list, images, buttons, titles and the arrows of the swiper used */
   .movie-list-container {
     padding: 0 20px;
   }
@@ -237,7 +211,9 @@ nav ul {
     opacity: 0.5;
     cursor: pointer;
   }
-  
+
+
+/* these styling activates various elements in the web page from the toggle, to navbar */
   .container.active {
     background-color: white;
   }
@@ -252,9 +228,7 @@ nav ul {
     color: black;
   }
   
-  .sidebar.active{
-      background-color: rgb(0, 0, 0);
-  }
+
   
   
   .toggle.active{
@@ -265,7 +239,9 @@ nav ul {
       background-color: rgb(0, 0, 0);
       transform: translateX(-20px);
   }
-  
+
+
+/* this media query applies the responsive stiles only when the screen resolution is 940px */
   @media only screen and (max-width: 940px){
       .menu-container{
           display: none;
@@ -275,7 +251,7 @@ nav ul {
 
 
 
-
+/* These style the footer of the page, including its contents and the social media icons within it */
   .footer{
     position: relative;
     width: 100%;
@@ -286,16 +262,18 @@ nav ul {
     padding: 0 5%;
     background-color: #171B27;
 }
-
+/**/
 .footer div{
     height: 100px;
 }
+/**/
 .footer h4{
     color: #d9d9d9;
     margin-top: 0.4rem;
     font-weight: 500;
     cursor: pointer;
 }
+/**/
 .footer .footer-social{
     margin-top: 0.5rem;
     display: flex;
@@ -303,7 +281,7 @@ nav ul {
     align-items: center;
     gap: 0.25rem;
 }
-
+/**/
 .footer-social i{
     width: 29px;
     height: 29px;
@@ -324,6 +302,7 @@ nav ul {
     -o-transition: all 0.2s ease;
 }
 
+/* These are vendor prefixes for the transform property in different browsers. They ensure that the hover effect is consistent across different browsers */
 .footer-social i:hover{
     background-color: var(--black);
     color: var(--pink);
